tests/tooling/fixtures/native/execution/negative/return_nonvoid_missing_value.objc3
module ReturnNonvoidMissingValue;

fn helper() -> i32 {
  return;
}

fn main() -> i32 {
  return helper();
}
